# Shepping2

./: .env.example  .flaskenv  .htaccess  .replit  CPANEL_DEPLOYMENT.md  CPANEL_DEPLOYMENT_STATUS.md  CPANEL_FILES_CHECKLIST.md  CPANEL_INSTALLATION_GUIDE.md  DATABASE_URL_FIXED.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  MIGRATION_COMPARISON.md  MYSQL_CONVERSION_GUIDE.md  MYSQL_MIGRATION_COMPLETED.md  MYSQL_SETUP_INSTRUCTIONS.md  Procfile  README.md  README_CPANEL.md  RENDER_DEPLOYMENT_FIX.md  RENDER_DEPLOYMENT_INSTRUCTIONS.md  RENDER_FINAL_SOLUTION.md  RENDER_SSL_FIX.md  RENDER_ULTIMATE_FIX.md  SECURITY_REPORT.md  SECURITY_SETUP.md  VERIFICATION_REPORT.md  app.py  app_start.py  cookies.txt  cpanel_config.py  cpanel_deploy.py  database_init.sql  database_schema.sql  debug_calculations.py  debug_user_edit.html  demo_with_mysql.py  error_handlers.py  forms.py  (+25 more)
ShippingApp/: README.md
attached_assets/: Pasted---1751301493063_1751301493064.txt  Pasted---1751322570134_1751322570135.txt  Pasted--DOCTYPE-html-html-lang-ar-dir-rtl-head-meta-charset-UTF-8-meta-name-viewport-c-1750750236995_1750750236996.txt  Pasted--DOCTYPE-html-html-lang-ar-dir-rtl-head-meta-charset-UTF-8-title--1750758993777_1750758993778.txt  Pasted--DOCTYPE-html-html-lang-ar-dir-rtl-head-meta-charset-UTF-8-title--1750843976175_1750843976176.txt  Pasted--div-class-space-y-6-rtl-text-right-px-4-py-6-Row-1-Sender-and-Receiver-div-cl-1750749664341_1750749664342.txt  Pasted-from-pathlib-import-Path-html-filename-shipments-updated--1750846325242_1750846325242.txt
(+491 files in other folders)
