[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=3.4.8",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "psycopg2-binary>=2.9.10",
    "pymysql==1.1.1",
    "python-dateutil==2.9.0.post0",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]
